logs/pygitrepo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathlib_mate'...
Listing './lib/python3.5/site-packages/pathlib_mate/pkg'...
Listing './lib/python3.5/site-packages/pathlib_mate-0.0.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygitrepo'...
Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}'...
Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/bash'...
Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs'...
Compiling './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/create_doctree.py'...
***   File "./lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/create_doctree.py", line 12
    import {{package_name}} as package
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/source'...
Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/source/_static'...
Compiling './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/source/conf.py'...
***   File "./lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/docs/source/conf.py", line 25
    import {{package_name}}
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/setup.py'...
***   File "./lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/setup.py", line 17
    import {{package_name}} as package
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/tests'...
Compiling './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/tests/test_import.py'...
***   File "./lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/tests/test_import.py", line 9
    import {{package_name}}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/{{ package_name }}'...
Compiling './lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/{{ package_name }}/__init__.py'...
***   File "./lib/python3.5/site-packages/pygitrepo/{{ repo_name }}/{{ package_name }}/__init__.py", line 11
    {% if author_name -%}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygitrepo-0.0.18.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
